inputs changed to material-ui, overflows propertie * in groupcard, addvisit eliminated. error in hours inputs (gotta fix)

--- a/financiation-react/src/assets/styles/AddVisitPage.css
+++ b/financiation-react/src/assets/styles/AddVisitPage.css
@@ -1,3 +1,16 @@
-* {
-    overflow: auto;
+.scrolling {
+    overflow-y: hidden;
+}
+
+.dropdownns{
+    position: relative;
+}
+
+.my-select .my-select__control {
+  z-index: 1; /* Asegura que el control del Select esté por encima de las floating labels */
+}
+
+.floating-label {
+  position: relative;
+  z-index: 2;
 }
