--- a/financiation-react/src/assets/styles/GroupCard.css
+++ b/financiation-react/src/assets/styles/GroupCard.css
@@ -105,9 +105,6 @@
 
 }
 
-* {
-    overflow-y: auto;
-}
 
 .colgroupcard {
     font-size: 0.7rem;
